# Rust_Human-Body-Simulation

./: Cargo.toml
src/: human.rs  indicators.rs  inputs.rs  main.rs
