[package]
name = "human_body_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "4.5.4"
rayon = "1.0"
rand = "0.8"
chrono = "0.4"
